[package]
name = "reqwest_prober_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5"
colored = "2.0"
reqwest = { version = "0.11", features = ["blocking", "json"] } 
tokio = { version = "1", features = ["full"] }
futures = "0.3"
url = "2.5.0"
ansi_term = "0.12.1"
